# ANACIN-X

./: .comm_pattern_analysis.sh.un~  .gitmodules  LICENSE  README.md  anacin_deps.sh  anacin_env.yaml  comm_pattern_analysis.sh  configure  graph_data.py  requirements.md  setup.sh  setup_deps.sh  test_env.yml  visualization.ipynb
apps/comm_pattern_generator/: CMakeLists.txt  amg2013_example.sh  amg2013_example_slurm.sh  build_graph.sh  comm_pattern_config.config  compute_kdts.sh  example_paths.config  example_paths_lsf.config  lsf_build_graph.sh  lsf_compute_kdts.sh  lsf_extract_slices.sh  lsf_kae_paths.config  lsf_make_plot.sh  lsf_paths.config  lsf_trace_pattern_pack_procs.sh  lsf_trace_pattern_spread_procs.sh  mini_mcb_example_slurm.sh  mini_mcb_grid_example.sh  mini_mcb_lsf_grid.sh  naive_lsf.sh  naive_ninja_reduce.sh  naive_reduce_example.sh  naive_reduce_example_slurm.sh  ninja_lsf.sh  one_step_build.sh  record_pattern_pack_procs.sh  rempi_study_naive_reduce.sh  test_join.sh  trace_pattern_pack_procs.sh  trace_pattern_spread_procs.sh  unstructured_mesh_example_lsf.sh  unstructured_mesh_example_slurm.sh  workflow_amg2013_pattern.sh  workflow_message_race_pattern.sh
apps/comm_pattern_generator/build_tellico-master/: #cmake_install.cmake#  CMakeCache.txt  Makefile  comm_pattern_generator
apps/comm_pattern_generator/config/: .json_gen.py.un~  amg2013_example_msg_size_1.json  amg2013_example_msg_size_1024.json  amg2013_example_msg_size_2048.json  amg2013_example_msg_size_4096.json  amg2013_example_msg_size_512.json  amg2013_msg_size_1.json  amg2013_msg_size_1024.json  (+53 more)
(+206 files in other folders)
